--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
     <div class="about-me-who-am-i">
       <div>
         <h2 class="mb-5">Quem sou eu?</h2>
-        <img src="../../../assets/img/bi.jpg" class="mat-elevation-z20">
+        <img src="assets/img/bi.jpg" class="mat-elevation-z20">
       </div>
 
       <mat-card>
