--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -17,10 +17,10 @@
           <div id="jana-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+                <img src="assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+                <img src="assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#jana-carousel" data-bs-slide="prev">
@@ -59,13 +59,13 @@
           <div id="bi-shop-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/bi-shop/bishop-funcionarios.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bi-shop/bishop-funcionarios.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/bi-shop/bishop-atribuir-supervisao.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bi-shop/bishop-atribuir-supervisao.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/bi-shop/bishop-validacao.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bi-shop/bishop-validacao.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#bi-shop-carousel" data-bs-slide="prev">
@@ -104,10 +104,10 @@
           <div id="course-manager-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/course-manager/course-manager-edit.png" class="d-block w-100" alt="...">
+                <img src="assets/img/course-manager/course-manager-edit.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/course-manager/course-manager-filter.png" class="d-block w-100" alt="...">
+                <img src="assets/img/course-manager/course-manager-filter.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#course-manager-carousel"
@@ -148,13 +148,13 @@
           <div id="soul-bank-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/bank/login.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bank/login.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/bank/cadastro.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bank/cadastro.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/bank/user.png" class="d-block w-100" alt="...">
+                <img src="assets/img/bank/user.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#soul-bank-carousel"
@@ -194,13 +194,13 @@
           <div id="sistema-funcionarios-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/firebase/adm.png" class="d-block w-100" alt="...">
+                <img src="assets/img/firebase/adm.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/firebase/employee.png" class="d-block w-100" alt="...">
+                <img src="assets/img/firebase/employee.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/firebase/login.png" class="d-block w-100" alt="...">
+                <img src="assets/img/firebase/login.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#sistema-funcionarios-carousel"
@@ -242,7 +242,7 @@
           <div id="my-doc-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/my-doc/home.jpeg" class="d-block w-100" alt="...">
+                <img src="assets/img/my-doc/home.jpeg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#my-doc-carousel" data-bs-slide="prev">
@@ -281,13 +281,13 @@
           <div id="open-book-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/open-book/home.png" class="d-block w-100" alt="...">
+                <img src="assets/img/open-book/home.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/open-book/favorites.png" class="d-block w-100" alt="...">
+                <img src="assets/img/open-book/favorites.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/open-book/books.png" class="d-block w-100" alt="...">
+                <img src="assets/img/open-book/books.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" data-bs-target="#open-book-carousel"
@@ -328,13 +328,13 @@
           <div id="produtos-da-terra-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/produtos-da-terra/modal.png" class="d-block w-100" alt="...">
+                <img src="assets/img/produtos-da-terra/modal.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/produtos-da-terra/form.png" class="d-block w-100" alt="...">
+                <img src="assets/img/produtos-da-terra/form.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/produtos-da-terra/landing-page.png" class="d-block w-100" alt="...">
+                <img src="assets/img/produtos-da-terra/landing-page.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#produtos-da-terra-carousel"
