download resume ok

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           </a>
         </li>
         <li class="nav-item" matTooltip="Download do meu currículo :)" matTooltipClass="matTooltip">
-          <a class="nav-link active" aria-current="page" href="../../../assets/files/bianca-schmitt-curriculo.pdf"
+          <a class="nav-link active" aria-current="page" href="assets/files/bianca-schmitt-curriculo.pdf"
             download>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff"
               class="bi bi-file-earmark-arrow-down" viewBox="0 0 16 16">
