--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -16,11 +16,13 @@
         <div mat-card-image>
           <div id="jana-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100"
+                  alt="Imagem do site de Jana Zdebskyi">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100"
+                  alt="Imagem do site de Jana Zdebskyi">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#jana-carousel" data-bs-slide="prev">
@@ -58,14 +60,16 @@
         <div mat-card-image>
           <div id="bi-shop-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/bi-shop/bishop-funcionarios.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/bi-shop/bishop-funcionarios.png" class="d-block w-100"
+                  alt="Lista de funcionários da Bishop">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/bi-shop/bishop-atribuir-supervisao.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/bi-shop/bishop-atribuir-supervisao.png" class="d-block w-100"
+                  alt="Funcionalidade para atribuir supervisão a um cargo">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/bi-shop/bishop-validacao.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/bi-shop/bishop-validacao.png" class="d-block w-100" alt="Validação de formulário">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#bi-shop-carousel" data-bs-slide="prev">
@@ -103,11 +107,13 @@
         <div mat-card-image>
           <div id="course-manager-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/course-manager/course-manager-edit.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/course-manager/course-manager-edit.png" class="d-block w-100"
+                  alt="Projeto course-manager">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/course-manager/course-manager-filter.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/course-manager/course-manager-filter.png" class="d-block w-100"
+                  alt="Filtro de lista">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#course-manager-carousel"
@@ -147,14 +153,14 @@
         <div mat-card-image>
           <div id="soul-bank-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/bank/login.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/bank/login.png" class="d-block w-100" alt="Login">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/bank/cadastro.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/bank/cadastro.png" class="d-block w-100" alt="Cadastro de cliente">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/bank/user.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/bank/user.png" class="d-block w-100" alt="Página do usuário">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#soul-bank-carousel"
@@ -193,14 +199,14 @@
         <div mat-card-image>
           <div id="sistema-funcionarios-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/firebase/adm.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/firebase/adm.png" class="d-block w-100" alt="Página do administrador">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/firebase/employee.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/firebase/employee.png" class="d-block w-100" alt="Lista de empregados">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/firebase/login.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/firebase/login.png" class="d-block w-100" alt="Página de login">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#sistema-funcionarios-carousel"
@@ -241,8 +247,8 @@
         <div mat-card-image>
           <div id="my-doc-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/my-doc/home.jpeg" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/my-doc/home.jpeg" class="d-block w-100" alt="Página de login">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#my-doc-carousel" data-bs-slide="prev">
@@ -280,25 +286,23 @@
         <div mat-card-image>
           <div id="open-book-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/open-book/home.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/open-book/home.png" class="d-block w-100" alt="Home da openBook">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/open-book/favorites.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/open-book/favorites.png" class="d-block w-100" alt="Favoritos">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/open-book/books.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/open-book/books.png" class="d-block w-100" alt="Livros">
               </div>
             </div>
-            <button class="carousel-control-prev" data-bs-target="#open-book-carousel"
-              data-bs-slide="prev">
+            <button class="carousel-control-prev" data-bs-target="#open-book-carousel" data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" data-bs-target="#open-book-carousel"
-              data-bs-slide="next">
+            <button class="carousel-control-next" data-bs-target="#open-book-carousel" data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
               </span>
@@ -327,14 +331,15 @@
         <div mat-card-image>
           <div id="produtos-da-terra-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="2000">
-                <img src="assets/img/produtos-da-terra/modal.png" class="d-block w-100" alt="...">
+              <div class="carousel-item active" data-bs-interval="6000">
+                <img src="assets/img/produtos-da-terra/modal.png" class="d-block w-100"
+                  alt="Modal da Produtos da Terra">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/produtos-da-terra/form.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/produtos-da-terra/form.png" class="d-block w-100" alt="Formulário">
               </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/produtos-da-terra/landing-page.png" class="d-block w-100" alt="...">
+              <div class="carousel-item" data-bs-interval="6000">
+                <img src="assets/img/produtos-da-terra/landing-page.png" class="d-block w-100" alt="Landing page">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#produtos-da-terra-carousel"
