--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-light">
+<nav class="navbar navbar-expand sticky-top navbar-light">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    <!-- <button class="navbar-toggler ml-auto custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    </button> -->
+    <div class="navbar-collapse justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item" [cdkCopyToClipboard]="value" matTooltip="Clique para copiar meu email" matTooltipClass="matTooltip" (click)="openSnackBar()">
           <a class="nav-link active" aria-current="page" >
